# model/domain/user_domain.go
@@ -1,0 +1,8 @@
+package domain
+
+type UserDomain struct {
+	Id       int
+	Name     string
+	Email    string
+	Password string
+}
